--- a/Source/TreasureGuide.Web/package.json
+++ b/Source/TreasureGuide.Web/package.json
@@ -8,6 +8,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@outboxcraft/beauter": "^0.2.4",
     "aurelia-animator-css": "^1.0.1",
     "aurelia-autocomplete": "^2.2.4",
     "aurelia-bootstrapper": "^2.1.0",
