Adding profile search for teams.

--- a/Source/TreasureGuide.Web/TreasureGuide.Web.csproj
+++ b/Source/TreasureGuide.Web/TreasureGuide.Web.csproj
@@ -53,6 +53,9 @@
       <None Update="src\models\generated\team-models.tst.gen">
         <CustomToolNamespace>Models\TeamModels\TeamModels.cs</CustomToolNamespace>
       </None>
+      <None Update="src\models\generated\team-search-model.tst.gen">
+        <CustomToolNamespace>Models\TeamModels\TeamSearchModel.cs</CustomToolNamespace>
+      </None>
       <None Update="src\models\imported.ts">
         <DesignTime>True</DesignTime>
         <AutoGen>True</AutoGen>
