--- a/Source/TreasureGuide.Web/TreasureGuide.Web.csproj
+++ b/Source/TreasureGuide.Web/TreasureGuide.Web.csproj
@@ -9,6 +9,10 @@
     <PropertyGroup>
         <UserSecretsId>aspnet-TreasureGuide.Web-5f05675e-555e-48ff-bb51-5d655998ec83</UserSecretsId>
     </PropertyGroup>
+
+    <ItemGroup>
+      <None Remove="src\models\search-model.ts" />
+    </ItemGroup>
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="6.1.1" />
         <PackageReference Include="EntityFramework" Version="6.1.3" />
@@ -41,20 +45,8 @@
         <Reference Include="System.Web.Extensions" />
     </ItemGroup>
     <ItemGroup>
-      <None Update="src\models\generated\profile-model.tst.gen">
-        <CustomToolNamespace>Models\ProfileModels\ProfileModel.cs</CustomToolNamespace>
-      </None>
       <None Update="src\models\generated\profile-models.tst.gen">
         <CustomToolNamespace>Models\ProfileModels\ProfileModels.cs</CustomToolNamespace>
-      </None>
-      <None Update="src\models\generated\role-constants.tst.gen">
-        <CustomToolNamespace>Constants\RoleConstants.cs</CustomToolNamespace>
-      </None>
-      <None Update="src\models\generated\team-models.tst.gen">
-        <CustomToolNamespace>Models\TeamModels\TeamModels.cs</CustomToolNamespace>
-      </None>
-      <None Update="src\models\generated\team-search-model.tst.gen">
-        <CustomToolNamespace>Models\TeamModels\TeamSearchModel.cs</CustomToolNamespace>
       </None>
       <None Update="src\models\imported.ts">
         <DesignTime>True</DesignTime>
@@ -68,6 +60,9 @@
     </ItemGroup>
     <ItemGroup>
       <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+    </ItemGroup>
+    <ItemGroup>
+      <TypeScriptCompile Include="src\models\search-model.ts" />
     </ItemGroup>
 
 </Project>
