Adding class pickers.

--- a/Source/TreasureGuide.Web/TreasureGuide.Web.csproj
+++ b/Source/TreasureGuide.Web/TreasureGuide.Web.csproj
@@ -11,6 +11,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <None Remove="src\custom-elements\unit-class-picker.ts" />
       <None Remove="src\models\search-model.ts" />
     </ItemGroup>
     <ItemGroup>
@@ -62,6 +63,7 @@
       <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
     </ItemGroup>
     <ItemGroup>
+      <TypeScriptCompile Include="src\custom-elements\unit-class-picker.ts" />
       <TypeScriptCompile Include="src\models\search-model.ts" />
     </ItemGroup>
 
