--- a/Source/TreasureGuide.Web/TreasureGuide.Web.csproj
+++ b/Source/TreasureGuide.Web/TreasureGuide.Web.csproj
@@ -11,10 +11,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <None Remove="src\custom-elements\unit-class-picker.ts" />
-      <None Remove="src\models\search-model.ts" />
-    </ItemGroup>
-    <ItemGroup>
         <PackageReference Include="AutoMapper" Version="6.1.1" />
         <PackageReference Include="EntityFramework" Version="6.1.3" />
         <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.1.0" />
@@ -46,9 +42,6 @@
         <Reference Include="System.Web.Extensions" />
     </ItemGroup>
     <ItemGroup>
-      <None Update="src\models\generated\profile-models.tst.gen">
-        <CustomToolNamespace>Models\ProfileModels\ProfileModels.cs</CustomToolNamespace>
-      </None>
       <None Update="src\models\imported.ts">
         <DesignTime>True</DesignTime>
         <AutoGen>True</AutoGen>
@@ -63,6 +56,7 @@
       <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
     </ItemGroup>
     <ItemGroup>
+      <TypeScriptCompile Include="src\custom-elements\unit-class-picker - Copy.ts" />
       <TypeScriptCompile Include="src\custom-elements\unit-class-picker.ts" />
       <TypeScriptCompile Include="src\models\search-model.ts" />
     </ItemGroup>
