Redoing the static page css.

--- a/Source/TreasureGuide.Web/appsettings.json
+++ b/Source/TreasureGuide.Web/appsettings.json
@@ -4,7 +4,7 @@
     },
     "JwtIssuerOptions": {
         "Issuer": "https://localhost:44387/",
-        "Subject": "NakamaDB",
+        "Subject": "NakamaNetwork",
         "Audience": "https://localhost:44387/"
     },
     "Logging": {
