--- a/Source/TreasureGuide.Web/TreasureGuide.Web.csproj
+++ b/Source/TreasureGuide.Web/TreasureGuide.Web.csproj
@@ -16,8 +16,10 @@
         <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.1.0" />
         <PackageReference Include="Microsoft.AspNetCore" Version="1.1.2" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="1.1.2" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="1.1.3" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="1.1.2" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="1.1.2" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.Twitter" Version="1.1.3" />
         <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="1.1.2" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="1.1.2" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.3" />
