--- a/Source/TreasureGuide.Web/package.json
+++ b/Source/TreasureGuide.Web/package.json
@@ -19,7 +19,8 @@
     "bluebird": "^3.4.1",
     "moment": "^2.20.1",
     "requirejs": "^2.3.2",
-    "text": "github:requirejs/text#latest"
+    "text": "github:requirejs/text#latest",
+    "whatwg-fetch": "^2.0.3"
   },
   "peerDependencies": {},
   "devDependencies": {
