--- a/Source/TreasureGuide.Web/TreasureGuide.Web.csproj
+++ b/Source/TreasureGuide.Web/TreasureGuide.Web.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
         <PackageReference Include="AspNet.Security.OAuth.Reddit" Version="1.0.0-rc2-final" />
+        <PackageReference Include="AspNet.Security.OAuth.Twitch" Version="1.0.0-rc2-final" />
         <PackageReference Include="AutoMapper" Version="6.1.1" />
         <PackageReference Include="EntityFramework" Version="6.1.3" />
         <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.1.0" />
