--- a/Source/TreasureGuide.Web/package.json
+++ b/Source/TreasureGuide.Web/package.json
@@ -14,6 +14,7 @@
     "aurelia-bootstrapper": "^2.1.0",
     "aurelia-dialog": "^1.0.0-rc.1.0.3",
     "aurelia-fetch-client": "^1.1.2",
+    "aurelia-markdown": "0.0.2",
     "aurelia-plugins-pagination": "^2.5.3",
     "aurelia-validation": "^1.0.0",
     "bluebird": "^3.4.1",
