Picking marked, adding sanitization, and better previewing.

--- a/Source/TreasureGuide.Web/package.json
+++ b/Source/TreasureGuide.Web/package.json
@@ -14,10 +14,10 @@
     "aurelia-bootstrapper": "^2.1.0",
     "aurelia-dialog": "^1.0.0-rc.1.0.3",
     "aurelia-fetch-client": "^1.1.2",
-    "aurelia-markdown": "0.0.2",
     "aurelia-plugins-pagination": "^2.5.3",
     "aurelia-validation": "^1.0.0",
     "bluebird": "^3.4.1",
+    "marked": "^0.3.12",
     "moment": "^2.20.1",
     "requirejs": "^2.3.2",
     "text": "github:requirejs/text#latest",
