--- a/Source/TreasureGuide.Web/TreasureGuide.Web.csproj
+++ b/Source/TreasureGuide.Web/TreasureGuide.Web.csproj
@@ -28,6 +28,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.3" />
         <PackageReference Include="Microsoft.AspNetCore.Owin" Version="1.1.2" />
         <PackageReference Include="Microsoft.AspNetCore.ResponseCompression" Version="1.0.3" />
+        <PackageReference Include="Microsoft.AspNetCore.Rewrite" Version="1.0.3" />
         <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.2" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="1.1.2" PrivateAssets="All" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.2" />
