--- a/Source/TreasureGuide.Web.Test/packages.config
+++ b/Source/TreasureGuide.Web.Test/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="6.1.1" targetFramework="net452" />
+  <package id="EntityFramework" version="6.0.0" targetFramework="net452" />
   <package id="MSTest.TestAdapter" version="1.1.18" targetFramework="net452" />
   <package id="MSTest.TestFramework" version="1.1.18" targetFramework="net452" />
 </packages>
