--- a/Source/TreasureGuide.Web/TreasureGuide.Web.csproj
+++ b/Source/TreasureGuide.Web/TreasureGuide.Web.csproj
@@ -16,6 +16,7 @@
         <PackageReference Include="AspNet.Security.OAuth.Twitch" Version="1.0.0-rc2-final" />
         <PackageReference Include="AutoMapper" Version="6.1.1" />
         <PackageReference Include="EntityFramework" Version="6.1.3" />
+        <PackageReference Include="Markdown" Version="2.2.1" />
         <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.1.0" />
         <PackageReference Include="Microsoft.AspNetCore" Version="1.1.2" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="1.1.2" />
