--- a/Source/TreasureGuide.Sniffer/TreasureGuide.Sniffer.csproj
+++ b/Source/TreasureGuide.Sniffer/TreasureGuide.Sniffer.csproj
@@ -41,6 +41,11 @@
       <HintPath>..\..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.Office.Interop.Excel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+      <HintPath>..\..\packages\Microsoft.Office.Interop.Excel.15.0.4795.1000\lib\net20\Microsoft.Office.Interop.Excel.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -58,14 +63,18 @@
   <ItemGroup>
     <Compile Include="Helpers\IdMaker.cs" />
     <Compile Include="Helpers\ParsingExtensions.cs" />
-    <Compile Include="Parsers\UnitAliasParser.cs" />
-    <Compile Include="Parsers\StageParser.cs" />
-    <Compile Include="Parsers\TreasureParser.cs" />
-    <Compile Include="Parsers\UnitFlagParser.cs" />
-    <Compile Include="Parsers\ShipParser.cs" />
-    <Compile Include="Parsers\UnitParser.cs" />
+    <Compile Include="DataParser\UnitAliasParser.cs" />
+    <Compile Include="DataParser\StageParser.cs" />
+    <Compile Include="DataParser\TreasureParser.cs" />
+    <Compile Include="DataParser\UnitFlagParser.cs" />
+    <Compile Include="DataParser\ShipParser.cs" />
+    <Compile Include="DataParser\UnitParser.cs" />
+    <Compile Include="ParseWorker.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TeamImporters\ExcelImporter.cs" />
+    <Compile Include="TeamImporters\Models\TeamEntry.cs" />
+    <Compile Include="TeamImporters\TeamImporter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
