Updating reddit threads.

--- a/Source/TreasureGuide.Sniffer/appsettings.json
+++ b/Source/TreasureGuide.Sniffer/appsettings.json
@@ -4,4 +4,7 @@
     "reddit.clientId": "",
     "reddit.clientSecret": "",
     "reddit.redirectUri": ""
+    "ConnectionStrings": {
+        "TreasureEntities": "Server=(localdb)\\tcdb;Database=tcdb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
 }
