--- a/Source/TreasureGuide.Sniffer/TreasureGuide.Sniffer.csproj
+++ b/Source/TreasureGuide.Sniffer/TreasureGuide.Sniffer.csproj
@@ -2,20 +2,27 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>netcoreapp2.0</TargetFramework>
+        <TargetFramework>net461</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="EntityFramework" Version="6.0.0" />
-        <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.0.0" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.0.0" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.0.0" />
+        <PackageReference Include="EntityFramework" Version="6.1.3" />
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="1.1.2" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="1.1.2" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="1.1.2" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="1.1.2" />
         <PackageReference Include="Microsoft.Office.Interop.Excel" Version="15.0.4795.1000" />
         <PackageReference Include="RedditSharp" Version="1.1.14" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\TreasureGuide.Entities\TreasureGuide.Entities.csproj" />
+      <ProjectReference Include="..\TreasureGuide.Entities\TreasureGuide.Entities.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
