--- a/Source/TreasureGuide.Web/TreasureGuide.Web.csproj
+++ b/Source/TreasureGuide.Web/TreasureGuide.Web.csproj
@@ -51,6 +51,12 @@
         <Reference Include="System.Web.Extensions" />
     </ItemGroup>
     <ItemGroup>
+      <None Update="src\models\generated\box-models.tst.gen">
+        <CustomToolNamespace>Models\BoxModels\BoxModels.cs</CustomToolNamespace>
+      </None>
+      <None Update="src\models\generated\box-search-model.tst.gen">
+        <CustomToolNamespace>Models\BoxModels\BoxSearchModel.cs</CustomToolNamespace>
+      </None>
       <None Update="src\models\imported.ts">
         <DesignTime>True</DesignTime>
         <AutoGen>True</AutoGen>
