--- a/Source/TreasureGuide.Web/TreasureGuide.Web.csproj
+++ b/Source/TreasureGuide.Web/TreasureGuide.Web.csproj
@@ -38,6 +38,7 @@
         <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="1.1.2" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.2" />
         <PackageReference Include="Serilog.Extensions.Logging.File" Version="1.1.0" />
+        <PackageReference Include="Z.EntityFramework.Plus.EF6" Version="1.7.14" />
     </ItemGroup>
     <ItemGroup>
         <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="1.0.0" />
