--- a/Source/TreasureGuide.Sniffer/TreasureGuide.Sniffer.csproj
+++ b/Source/TreasureGuide.Sniffer/TreasureGuide.Sniffer.csproj
@@ -13,6 +13,7 @@
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="1.1.2" />
         <PackageReference Include="Microsoft.Office.Interop.Excel" Version="15.0.4795.1000" />
         <PackageReference Include="RedditSharp" Version="1.1.14" />
+        <PackageReference Include="Z.EntityFramework.Plus.EF6" Version="1.7.14" />
     </ItemGroup>
 
     <ItemGroup>
