Updating base appsettings

--- a/Source/TreasureGuide.Web/appsettings.production.json
+++ b/Source/TreasureGuide.Web/appsettings.production.json
@@ -8,6 +8,19 @@
         "Audience": ""
     },
     "Authentication:Jwt:Key": "",
-    "Authentication:Google:ClientID": "",
-    "Authentication:Google:ClientSecret": ""
+    "Authentication:Google:ClientID": ""
+    "Authentication:Google:ClientSecret": "",
+    "Authentication:Facebook:ClientID": "",
+    "Authentication:Facebook:ClientSecret": "",
+    "Authentication:Twitter:ConsumerKey": "",
+    "Authentication:Twitter:ConsumerSecret": "",
+    "Authentication:Reddit:ClientID": "",
+    "Authentication:Reddit:ClientSecret": "",
+    "Authentication:Twitch:ClientID": "",
+    "Authentication:Twitch:ClientSecret": "",
+    "Authentication:Discord:ClientID": "",
+    "Authentication:Discord:ClientSecret": "",
+    "Authentication:PayPal:UserID": "",
+    "Authentication:PayPal:ClientID": "",
+    "Authentication:PayPal:ClientSecret": ""
 }
