--- a/Source/TreasureGuide.Entities/TreasureGuide.Entities.csproj
+++ b/Source/TreasureGuide.Entities/TreasureGuide.Entities.csproj
@@ -73,6 +73,12 @@
     <Compile Include="Interfaces\ICanEdit.cs" />
     <Compile Include="Interfaces\IIdItem.cs" />
     <Compile Include="Interfaces\ISubItem.cs" />
+    <Compile Include="PaymentState.cs">
+      <DependentUpon>TreasureEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PaymentType.cs">
+      <DependentUpon>TreasureEntities.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Round.cs">
       <DependentUpon>TreasureEntities.tt</DependentUpon>
@@ -129,12 +135,6 @@
       <DependentUpon>TreasureEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="TeamVote.cs">
-      <DependentUpon>TreasureEntities.tt</DependentUpon>
-    </Compile>
-    <Compile Include="TransactionState.cs">
-      <DependentUpon>TreasureEntities.tt</DependentUpon>
-    </Compile>
-    <Compile Include="TransactionType.cs">
       <DependentUpon>TreasureEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="TreasureEntities.Context.cs">
