--- a/Source/TreasureGuide.Web/appsettings.production.json
+++ b/Source/TreasureGuide.Web/appsettings.production.json
@@ -21,6 +21,7 @@
     "Authentication:Discord:ClientID": "",
     "Authentication:Discord:ClientSecret": "",
     "Authentication:PayPal:UserID": "",
+    "Authentication:PayPal:ProfileID": "",
     "Authentication:PayPal:ClientID": "",
     "Authentication:PayPal:ClientSecret": ""
 }
