Adding Azure execution strategy for safety purposes.

--- a/Source/TreasureGuide.Entities/TreasureGuide.Entities.csproj
+++ b/Source/TreasureGuide.Entities/TreasureGuide.Entities.csproj
@@ -152,6 +152,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>TreasureEntities.edmx</DependentUpon>
     </Compile>
+    <Compile Include="TreasureEntitiesConfiguration.cs" />
     <Compile Include="Unit.cs">
       <DependentUpon>TreasureEntities.tt</DependentUpon>
     </Compile>
