--- a/Source/TreasureGuide.Entities/TreasureGuide.Entities.csproj
+++ b/Source/TreasureGuide.Entities/TreasureGuide.Entities.csproj
@@ -71,6 +71,7 @@
     </Compile>
     <Compile Include="InterfaceDefinitions.cs" />
     <Compile Include="Interfaces\ICanEdit.cs" />
+    <Compile Include="Interfaces\IEditedDateItem.cs" />
     <Compile Include="Interfaces\IIdItem.cs" />
     <Compile Include="Interfaces\ISubItem.cs" />
     <Compile Include="PaymentState.cs">
@@ -160,6 +161,9 @@
       <DependentUpon>TreasureEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="UnitClass.cs">
+      <DependentUpon>TreasureEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="UnitEvolution.cs">
       <DependentUpon>TreasureEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="UnitFlag.cs">
