--- a/Source/TreasureGuide.Web/package.json
+++ b/Source/TreasureGuide.Web/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.20.1",
     "requirejs": "^2.3.2",
     "text": "github:requirejs/text#latest",
+    "thenby": "^1.2.3",
     "whatwg-fetch": "^2.0.3"
   },
   "peerDependencies": {},
