--- a/Source/TreasureGuide.Web/package.json
+++ b/Source/TreasureGuide.Web/package.json
@@ -17,6 +17,7 @@
     "aurelia-plugins-pagination": "^2.5.3",
     "aurelia-validation": "^1.0.0",
     "bluebird": "^3.4.1",
+    "fixed-table-js": "^1.5.3",
     "marked": "^0.3.12",
     "moment": "^2.20.1",
     "requirejs": "^2.3.2",
