--- a/Source/TreasureGuide.Web/TreasureGuide.Web.csproj
+++ b/Source/TreasureGuide.Web/TreasureGuide.Web.csproj
@@ -53,6 +53,9 @@
         <Reference Include="System.Web.Extensions" />
     </ItemGroup>
     <ItemGroup>
+      <None Update="src\models\generated\cache-item-type.tst.gen">
+        <CustomToolNamespace>..\TreasureGuide.Entities\CacheItemType.cs</CustomToolNamespace>
+      </None>
       <None Update="src\models\generated\team-credit-type.tst.gen">
         <CustomToolNamespace>..\TreasureGuide.Entities\TeamCreditType.cs</CustomToolNamespace>
       </None>
