--- a/Source/TreasureGuide.Sniffer/TreasureGuide.Sniffer.csproj
+++ b/Source/TreasureGuide.Sniffer/TreasureGuide.Sniffer.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoMapper" Version="6.1.1" />
         <PackageReference Include="EntityFramework" Version="6.1.3" />
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="1.1.2" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="1.1.2" />
@@ -17,6 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\TreasureGuide.Common\TreasureGuide.Common.csproj" />
       <ProjectReference Include="..\TreasureGuide.Entities\TreasureGuide.Entities.csproj" />
     </ItemGroup>
 
