Moving cache items around.

--- a/Source/TreasureGuide.Common/TreasureGuide.Common.csproj
+++ b/Source/TreasureGuide.Common/TreasureGuide.Common.csproj
@@ -33,6 +33,9 @@
     <Reference Include="AutoMapper, Version=6.1.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
       <HintPath>..\..\packages\AutoMapper.6.1.1\lib\net45\AutoMapper.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -80,6 +83,7 @@
     <Compile Include="Models\UnitModels\UnitSearchModel.cs" />
     <Compile Include="Models\UnitModels\UnitStubModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringTrimmingJsonConverter.cs" />
     <Compile Include="Validators\EnoughNonSubsAttribute.cs" />
     <Compile Include="Validators\EnoughUnitsAttribute.cs" />
     <Compile Include="Validators\NoDuplicateGenericsAttribute.cs" />
