--- a/Source/TreasureGuide.Entities/TreasureGuide.Entities.csproj
+++ b/Source/TreasureGuide.Entities/TreasureGuide.Entities.csproj
@@ -102,6 +102,9 @@
     <Compile Include="NotificationEventType.cs">
       <DependentUpon>TreasureEntities.tt</DependentUpon>
     </Compile>
+    <Compile Include="NotificationSummary.cs">
+      <DependentUpon>TreasureEntities.tt</DependentUpon>
+    </Compile>
     <Compile Include="PaymentState.cs">
       <DependentUpon>TreasureEntities.tt</DependentUpon>
     </Compile>
