More efficient score keeping.

--- a/Source/TreasureGuide.Entities/TreasureGuide.Entities.csproj
+++ b/Source/TreasureGuide.Entities/TreasureGuide.Entities.csproj
@@ -151,6 +151,9 @@
     <Compile Include="TeamReport.cs">
       <DependentUpon>TreasureEntities.tt</DependentUpon>
     </Compile>
+    <Compile Include="TeamScore.cs">
+      <DependentUpon>TreasureEntities.tt</DependentUpon>
+    </Compile>
     <Compile Include="TeamSocket.cs">
       <DependentUpon>TreasureEntities.tt</DependentUpon>
     </Compile>
