--- a/Source/TreasureGuide.Entities/TreasureGuide.Entities.csproj
+++ b/Source/TreasureGuide.Entities/TreasureGuide.Entities.csproj
@@ -133,9 +133,6 @@
     <Compile Include="Ship.cs">
       <DependentUpon>TreasureEntities.tt</DependentUpon>
     </Compile>
-    <Compile Include="SimilarTeams_Result.cs">
-      <DependentUpon>TreasureEntities.tt</DependentUpon>
-    </Compile>
     <Compile Include="SocketType.cs">
       <DependentUpon>TreasureEntities.tt</DependentUpon>
     </Compile>
@@ -167,6 +164,9 @@
       <DependentUpon>TreasureEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="TeamGenericSlot.cs">
+      <DependentUpon>TreasureEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TeamMini.cs">
       <DependentUpon>TreasureEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="TeamReport.cs">
