--- a/Source/NakamaNetwork.Web/appsettings.json
+++ b/Source/NakamaNetwork.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-NakamaNetwork.Site-5FAF3446-8D1B-46F2-BEDE-537051617E84;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\tcdb;Database=nndb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
