--- a/Source/NakamaNetwork.Sniffer/NakamaNetwork.Sniffer.csproj
+++ b/Source/NakamaNetwork.Sniffer/NakamaNetwork.Sniffer.csproj
@@ -14,4 +14,10 @@
     <ProjectReference Include="..\NakamaNetwork.Entities\NakamaNetwork.Entities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
