--- a/Source/NakamaNetwork.Web/NakamaNetwork.Web.csproj
+++ b/Source/NakamaNetwork.Web/NakamaNetwork.Web.csproj
@@ -8,6 +8,9 @@
 
 
   <ItemGroup>
+    <PackageReference Include="AspNet.Security.OAuth.Discord" Version="2.0.1" />
+    <PackageReference Include="AspNet.Security.OAuth.Reddit" Version="2.0.1" />
+    <PackageReference Include="AspNet.Security.OAuth.Twitch" Version="2.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
   </ItemGroup>
