Filling out data models.

--- a/Source/TreasureGuide.Common/TreasureGuide.Common.csproj
+++ b/Source/TreasureGuide.Common/TreasureGuide.Common.csproj
@@ -6,10 +6,15 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="8.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TreasureGuide.Entities\TreasureGuide.Entities.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
 
 </Project>
